🚧 WIP frontend implementation
Checks in the frontend implementation.
