# backend/internal/api/go/model_get_expenses_response.go
@@ -1,0 +1,48 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Ledger API
+ *
+ * This is the API for the ledger backend.
+ *
+ * API version: 0.0.1
+ */
+
+package openapi
+
+
+
+
+type GetExpensesResponse struct {
+
+	Expenses []Expense `json:"expenses"`
+}
+
+// AssertGetExpensesResponseRequired checks if the required fields are not zero-ed
+func AssertGetExpensesResponseRequired(obj GetExpensesResponse) error {
+	elements := map[string]interface{}{
+		"expenses": obj.Expenses,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	for _, el := range obj.Expenses {
+		if err := AssertExpenseRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertGetExpensesResponseConstraints checks if the values respects the defined constraints
+func AssertGetExpensesResponseConstraints(obj GetExpensesResponse) error {
+	for _, el := range obj.Expenses {
+		if err := AssertExpenseConstraints(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
