# backend/internal/server/income.go
@@ -11,6 +11,35 @@ import (
 	"go.uber.org/zap"
 )
 
+func (s *Server) GetIncome(ctx context.Context, month int32) (openapi.ImplResponse, error) {
+	inc, err := s.pgs.GetIncome(ctx, int(month))
+	if err != nil {
+		s.zl.Error("internal error while getting income", zap.Error(err))
+		return openapi.Response(http.StatusInternalServerError, openapi.ErrorResponse{
+			Msg: "error when fetching income",
+		}), nil
+	}
+
+	return openapi.Response(http.StatusOK, openapi.GetIncomeResponse{
+		Income: mapIncome(inc),
+	}), nil
+}
+
+func mapIncome(inc []model.Income) []openapi.Income {
+	rsInc := make([]openapi.Income, 0, len(inc))
+	for _, in := range inc {
+		rsInc = append(rsInc, openapi.Income{
+			Amount:   in.Amount,
+			Date:     in.Date.Format(time.RFC3339),
+			Id:       in.ID,
+			Name:     in.Name,
+			Received: in.Received,
+		})
+	}
+
+	return rsInc
+}
+
 func (s *Server) AddIncome(ctx context.Context, month int32, income openapi.Income) (openapi.ImplResponse, error) {
 	date, err := parseDate(income.Date)
 	if err != nil {
